# Cursovaya-rabota

./: CMakeLists.txt  ExcelExporter.cpp  ExcelExporter.h  Main.qml  README.md  clientmodel.cpp  clientmodel.h  databasemanager.cpp  databasemanager.h  main.cpp  resources.qrc
Components/: ActionMenu.qml  AddClient.qml  AuthorisationForm2.qml  AuthorizationForm.qml  FormExit.qml  Page.qml  Theme.qml  UserSession.qml
